apps/freshrss/base/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: freshrss
spec:
  rules:
    - host: ""
      http:
        paths:
          - path: "/"
            pathType: Prefix
            backend:
              service:
                name: freshrss
                port:
                  number: 80
  tls:
    - hosts:
        - ""
      secretName: freshrss-tls-ingress
